feat(formulario): Adding style to invalid field and it error message.

--- a/src/styles/formulario.module.css
+++ b/src/styles/formulario.module.css
@@ -21,12 +21,25 @@
 }
 
 .content form input {
+	width: 100%;
 	padding: 0.75rem 1.5rem;
 	border-radius: 8px;
 	border: 1px solid #ccc;
+	margin-bottom: 0.5rem;
+}
+
+.content form input.inputError {
+	border-color: red;
 }
 
 .content form button {
 	width: 50%;
 	margin-left: auto;
 }
+
+.textError {
+	color: red;
+	font-size: 0.8rem;
+}
+
+
